--- a/css/index.css
+++ b/css/index.css
@@ -4,81 +4,57 @@ body {
   padding: 35px 40px;
 }
 
-.main {
-  display: inline-block;
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
-.container {
-  width: 590px;
-  display: inline-block;
-  padding: 10px;
-  /* border: 3px solid black; */
-  background-color: rgb(255, 249, 159);
-  border-radius: 15px;
-}
-
-.header__logo {
-  border: 3px solid black;
-  border-radius: 10px;
-}
-
-.title {
-  color: #000;
+.header__title {
+  color: red;
   font-size: 40px;
   font-weight: 600;
   margin-top: 25px;
   margin-bottom: 25px;
 }
 
-.description {
-  color: rgb(58, 55, 55);
+.header__description {
+  width: 150px;
+  background-color: blue;
   font-size: 20px;
   font-weight: 400;
 }
 
+.header__firstCode {
+  color: red;
+}
+
+.main__title {
+  color: #fff;
+  background-color: green;
+  padding: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
 .link {
-  border: 2px transparent;
-  border-radius: 15px;
-  background-color: white;
-  padding: 8px 15px;
-  text-decoration: none;
-  color: #000;
+  color: blue;
   font-size: 20px;
   font-weight: 600;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.link:hover {
-  background-color: rgb(117, 255, 82);
+.main__second_title {
+  color: #fff;
+  background-color: green;
+  padding: 40px 30px;
 }
 
-.form {
-  display: inline-flex;
-  flex-direction: column;
+.main__description {
+  margin-left: 70px;
 }
 
 .input {
   margin-bottom: 8px;
-  padding-top: 11px;
-  padding-bottom: 11px;
-  padding-left: 5px;
-  border-color: transparent;
-  box-sizing: border-box;
-  border-radius: 4px;
+
   margin-top: 4px;
-  width: 300px;
 }
 
-.submit__btn {
-  padding: 10px 20px;
-  background-color: #fff;
-  border: transparent;
-  border-radius: 4px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.submit__btn:hover {
-  background-color: rgb(117, 255, 82);
+.item {
+  border: 1px solid black;
+  margin-bottom: 5px;
+  font-size: 27px;
 }
